--- a/webgl/01.html
+++ b/webgl/01.html
@@ -8,38 +8,30 @@
 <body>
 
 <script>
-    var scene, camera, renderer;
-    var geometry, material, mesh;
+    var scene = new THREE.Scene();
+    var camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
 
-    init();
-    animate();
+    var renderer = new THREE.WebGLRenderer();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
 
-    function init() {
-        scene = new THREE.Scene();
+    var geometry = new THREE.CubeGeometry(1,1,1);
+    var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
+    var cube = new THREE.Mesh(geometry, material);
+    scene.add(cube);
 
-        camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 10000 );
-        camera.position.z = 1000;
+    camera.position.z = 5;
 
-        geometry = new THREE.BoxGeometry( 200, 200, 200 );
-        material = new THREE.MeshBasicMaterial( { color: 0xff0000, wireframe: true } );
-        mesh = new THREE.Mesh( geometry, material );
+    var render = function () {
+        requestAnimationFrame(render);
 
-        scene.add( mesh );
+        cube.rotation.x += 0.1;
+        cube.rotation.y += 0.1;
 
-        renderer = new THREE.CanvasRenderer();
-        renderer.setSize( window.innerWidth, window.innerHeight );
+        renderer.render(scene, camera);
+    };
 
-        document.body.appendChild( renderer.domElement );
-    }
-
-    function animate() {
-        requestAnimationFrame( animate );
-
-        mesh.rotation.x += 0.01;
-        mesh.rotation.y += 0.02;
-
-        renderer.render( scene, camera );
-    }
+    render();
 
 </script>
 </body>
